--- a/8.-Cadenas.ipynb
+++ b/8.-Cadenas.ipynb
@@ -34,11 +34,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "c47ac784-6fe5-4a24-abdc-3d0b2c537233",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3.14'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "f'{3.141592:0.3}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -50,11 +64,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "93f73be0-08a4-40e6-bd6a-9a2ccd15f2e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'150'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{150:d}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -66,11 +93,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ee39ec1f-dd90-457c-bcd1-0f6aec52f7ef",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'B'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{66:c}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,11 +122,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "174fb779-d902-4c17-a67a-13c768d26265",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Este curso está de 100'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{\"Este curso está de \":s}{100}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -100,11 +153,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c30dd78d-a42f-4111-8c7e-9e40e8b6c402",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "':-)'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{58:c}{45:c}{41:c}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -124,51 +190,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "913a1c8c-61ea-4ff3-8ea9-f07e02c25a85",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "44a6f0c8-b83c-47ef-a535-94138e443205",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "0ab306c4-75ec-4586-ac09-a117fea3a899",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "4e706515-938e-4fd2-8639-4fdd1fbb0d8f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[       314]'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'[{314:10d}]'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "36ed4215-16da-4708-9b57-4d795fbc1749",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[       314]'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'[{314:10d}]'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "dfcc37b9-cf77-41ac-af98-3e50eac54112",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[Alineación     3.14150000]'"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'[{\"Alineación\":15}{3.1415:10.8f}]'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "f5911f8f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Alineación     '"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{\"Alineación\":15}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,19 +282,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "id": "b614baf4-7774-43cc-a54f-92d15e03cb7f",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "85ad0a07-192f-4f49-920d-49c2fee4dc0a",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Alineación    3.140000'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{\"Alineación\":12}{3.14:>10f}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -204,27 +311,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "id": "b8de6f4f-af25-44fe-95df-298937ae0171",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'  Alineación   '"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{'Alineación':^15}'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4dd550df-a874-4969-b99e-49280cafc209",
+   "execution_count": 49,
+   "id": "2b4c2ac6",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e93a5ccb-efb8-478f-adbf-0a102d38d711",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'  3.1400  '"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{3.14:^10.4f}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,11 +363,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "id": "ff33c3f4-25c5-4716-a631-371cde795344",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'[    Daniel][Daniel    ][  Daniel  ]'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'[{\"Daniel\":>10}][{\"Daniel\":<10}][{\"Daniel\":^10}]'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -266,16 +404,21 @@
    "execution_count": null,
    "id": "2edf017f-00ca-4401-98b6-0ecb0ce19bd4",
    "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "76f90f0d-afae-4ccd-a087-499ad7fda1cb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'      -150'"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{-150:+10d}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -287,11 +430,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "7f70bec3-c2ed-4116-a529-fffada5e9734",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'+000000150'"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{150:+010d}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -303,27 +459,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 76,
    "id": "20155918-329f-411d-a795-17c1a7d7d762",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n",
+      " 27\n",
+      "-27\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{27:d}\\n{27: d}\\n{-27: d}')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "id": "e175f898-9300-4695-bde6-7b264cb0f9b0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' 9,872,347'"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{9872347: ,d}'"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "e5da6324-0483-45b7-b7eb-682dadeeaef9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'    1,982,383.23    '"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f'{1982383.229: ^20,.2f}'"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -337,11 +531,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "09a0de50-d0d6-4a53-824e-fccf55f04a74",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     +11,483.53 \n",
+      "     -4,581.44\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'{11483.528:>+15,.2f} \\n {-4581.4413:>+13,.2f}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1495,7 +1700,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
